--- a/src/components/Brands/brand.styles.css
+++ b/src/components/Brands/brand.styles.css
@@ -33,6 +33,12 @@
     width: 90%;
 }
 
+.img__12 {
+    height: 50px;
+    width: auto;
+    margin-left: 80px;
+}
+
 @media only screen and (max-width: 600px) {
     .trusted {
         font-family: 'Poppins';
